force-app/main/default/objects/HN_DataObject__c/HN_DataObject__c.object-meta.xml
<CustomObject>
    <description>This Object Holds All the JSON response as record from Hacker News API</description>
    <label>HN_DataObject</label>
    <nameField>
        <label>HN_DataObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HN_DataObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>