force-app/main/default/objects/HN_DataObject__c/fields/Descendants__c.field-meta.xml
<CustomField>
    <fullName>Descendants__c</fullName>
    <description>Total number of comments for a story or poll.</description>
    <label>Descendants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>