force-app/main/default/objects/HN_DataObject__c/fields/IsDead__c.field-meta.xml
<CustomField>
    <fullName>IsDead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the item is marked as dead.</description>
    <label>Is Dead</label>
    <type>Checkbox</type>
</CustomField>