force-app/main/default/objects/HN_DataObject__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the item is marked as deleted.</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>