force-app/main/default/objects/HN_DataObject__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <description>Unique Hacker News item ID (Number, External ID, Unique).</description>
    <label>Item ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>