force-app/main/default/objects/HN_DataObject__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <description>Type of HN item: story, comment, job, poll, pollopt.</description>
    <label>Item Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>story</fullName>
                <default>true</default>
                <label>story</label>
            </value>
            <value>
                <fullName>job</fullName>
            </value>
            <value>
                <fullName>comment</fullName>
            </value>
            <value>
                <fullName>poll</fullName>
            </value>
            <value>
                <fullName>pollopt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>