force-app/main/default/objects/HN_DataObject__c/fields/Kids__c.field-meta.xml
<CustomField>
    <fullName>Kids__c</fullName>
    <description>List of IDs of child items.</description>
    <label>Kids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>