force-app/main/default/objects/HN_DataObject__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <description>parent item id for this child</description>
    <label>Parent ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>