force-app/main/default/objects/HN_DataObject__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <description>List of poll option item IDs.</description>
    <label>Parts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>