force-app/main/default/objects/HN_DataObject__c/fields/PollId__c.field-meta.xml
<CustomField>
    <fullName>PollId__c</fullName>
    <description>associated poll item</description>
    <label>Poll ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>