force-app/main/default/objects/HN_DataObject__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>Title of the item.</description>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>