force-app/main/default/objects/HN_DataObject__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Unix timestamp when the item was created.</description>
    <label>Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>