force-app/main/default/objects/HN_DataObject__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>URL of sites if it mentioned in story</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>