force-app/main/default/objects/HN_DataObject__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username of the author of the item.</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>